--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "backend"]
 	path = backend
 	url = https://github.com/lucas-r-oliveira/marcus-bikeshop-backend.git
+[submodule "client"]
+	path = client
+	url = https://github.com/lucas-r-oliveira/marcus-bikeshop-client.git
